Let the histogram be shown as soon as its ready.

--- a/histogram.html
+++ b/histogram.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <script src="values.js"></script>
+    <script src="values.top.js"></script>
     <h1><script>document.writeln(gitData.path)</script></h1>
     <script src="d3/d3.min.js"></script>
     <script>
